# Chest-X-Ray-VAE

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
scripts/: evaluate.py  train.py
src/chest_xray_vae/: __init__.py  config.py  data.py  evaluate.py  train.py
src/chest_xray_vae/models/: vae.py
src/chest_xray_vae/utils/: checkpoint.py  io.py  metrics.py  seed.py
tests/: test_model_shapes.py
