[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chest-xray-vae"
version = "0.1.0"
description = "Modular beta-VAE training and evaluation for chest X-ray pneumonia images"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
